# data-quality-governance-pipeline

./: .env  .env.template  DEPLOYMENT.md  README.md  create_dashboards.py  data_quality_dashboard.ipynb  data_quality_demo_colab.ipynb  generate_sample_data.py  main.py  pyproject.toml  realtime_dashboard.yaml  requirements.txt  setup_pubsub.py  simple_dashboard_creator.py  streamlit_app.py  working_dashboard.yaml
.streamlit/: config.toml
ai-automation-workflows-llm/: README.md  dashboard.py  integrated_demo.py  main.py  requirements.txt  test_integration.py
ai-automation-workflows-llm/api/: app.py
ai-automation-workflows-llm/config/: config.yaml  looker_studio_config.json  monitoring_dashboard.json  pubsub_config.yaml
ai-automation-workflows-llm/notebooks/: AI_Automation_Demo.ipynb  ai_automation_dashboard.ipynb  experimentation.ipynb
ai-automation-workflows-llm/tests/: test_agents.py
configs/: validation_rules.yaml
dashboards/: ai_automation_dashboard.py  data_lake_migration_dashboard.py  data_quality_dashboard.ipynb  data_quality_dashboard.py  realtime_pipeline_dashboard.py
data-lake-migration-bigquery-azure/data-lake-migration-bigquery-azure/: README.md  main.py  requirements.txt
data-quality-governance-pipeline/: README.md  data_quality_demo_colab.ipynb  kaggle_data_loader.py  main.py  requirements.txt
data-quality-governance-pipeline/configs/: validation_rules.yaml
data/kaggle/: telco_customer_churn.csv  (+1 more)
real-time-data-pipeline-gcp/: README.md  realtime_pipeline_colab.ipynb  realtime_pipeline_dashboard.ipynb  requirements.txt
src/: pipeline.py
(+78 files in other folders)
