[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-governance-pipeline"
version = "0.1.0"
description = "A data quality governance pipeline project"
authors = [
    {name = "Vaishnavi Dorlikar", email = "your.email@example.com"},
]
dependencies = [
    # Add your dependencies here, or keep as is since requirements.txt exists
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "src"